View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029214 | Open CASCADE | OCCT:Application Framework | public | 2017-10-12 11:30 | 2018-06-29 21:19 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 5.2.2 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029214: Application Framework - TPrsStd_AISPresentation::AISUpdate() should not implicitly redraw 3D Viewer | ||||
Description | All places within TPrsStd_AISPresentation::AISUpdate() modify presentation without redrawing 3D Viewer, except one place:void TPrsStd_AISPresentation::AISUpdate() { ... aContext->Remove (myAIS, Standard_True); This makes XShow command executing ages on big model due to viewer redraw on each root in the Document. It looks like a bug in TPrsStd_AISPresentation::AISUpdate() implementation. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR29214 has been created by kgv. SHA-1: fabb900c5e58b858fc889fcbda7decd9b78008fe Detailed log of new commits: Author: kgv Date: Thu Oct 12 11:31:41 2017 +0300 0029214: Application Framework - TPrsStd_AISPresentation::AISUpdate() should not implicitly redraw 3D Viewer |
|
Patch is ready for review. |
|
Dear VRO, Could you review this fix, since you have wider experience of working with AIS. |
|
I agree, it was a mistake to redraw the view on AISUpdate(). |
|
Combination - OCCT branch : CR29214 SHA-1: fabb900c5e58b858fc889fcbda7decd9b78008fe Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: No differences that require special attention Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29214 has been deleted by kgv. SHA-1: fabb900c5e58b858fc889fcbda7decd9b78008fe |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-10-12 11:30 | kgv | New Issue | |
2017-10-12 11:30 | kgv | Assigned To | => mpv |
2017-10-12 11:32 | git | Note Added: 0071362 | |
2017-10-12 11:32 | kgv | Note Added: 0071363 | |
2017-10-12 11:32 | kgv | Status | new => resolved |
2017-10-12 11:34 | kgv | Product Version | 7.2.0 => 5.2.2 |
2017-10-16 09:40 | mpv | Assigned To | mpv => vro |
2017-10-16 09:41 | mpv | Note Added: 0071510 | |
2017-10-16 10:10 | vro | Note Added: 0071513 | |
2017-10-16 10:10 | vro | Assigned To | vro => bugmaster |
2017-10-16 10:10 | vro | Status | resolved => reviewed |
2017-10-16 15:06 | bugmaster | Test case number | => Not required |
2017-10-16 15:08 | bugmaster | Note Added: 0071538 | |
2017-10-16 15:08 | bugmaster | Status | reviewed => tested |
2017-10-27 09:54 | bugmaster | Changeset attached | => occt master f6c2b39a |
2017-10-27 09:54 | bugmaster | Status | tested => verified |
2017-10-27 09:54 | bugmaster | Resolution | open => fixed |
2017-11-02 09:56 | kgv | Relationship added | child of 0028088 |
2017-11-08 18:24 | git | Note Added: 0072071 | |
2018-02-17 19:03 | abv | Target Version | 7.4.0 => 7.3.0 |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |